--- a/Regression/Multiple_Linear_Regression.ipynb
+++ b/Regression/Multiple_Linear_Regression.ipynb
@@ -88,7 +88,7 @@
         "plt.rcParams['figure.figsize'] = (7, 7)\n",
         "plt.style.use('ggplot')"
       ],
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
         "df_pie = pd.read_csv('https://raw.githubusercontent.com/farahqotrunnada/DTI/main/Regression/pie-sales.csv', sep =\";\")\n",
         "df_pie"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +296,7 @@
         "ax.set_yticklabels([i/4 for i in range(10,19)], rotation=-15, va='baseline', ha='left')\n",
         "plt.show()\n"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -341,7 +341,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -375,7 +375,7 @@
         "X = df_pie[['price','advertising']]\n",
         "Y = df_pie['pie_sales']"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,7 +393,7 @@
         "regr = linear_model.LinearRegression()\n",
         "regr.fit(X, Y)"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,14 +416,14 @@
         "outputId": "1e4a96dc-591d-4cba-c78f-2823ec0e0cc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 88
         }
       },
       "source": [
         "print('Intercept: \\n', regr.intercept_)\n",
         "print('Coefficients: \\n', regr.coef_)"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +444,7 @@
         "outputId": "235707b3-c6ef-496f-ad13-74a312fbe826",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 404
+          "height": 414
         }
       },
       "source": [
@@ -501,7 +501,7 @@
         "\n",
         "fig.tight_layout()"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -533,7 +533,7 @@
         "new_advertising = 3.8 \n",
         "print ('Predicted pie sales: \\n', regr.predict([[new_prices,new_advertising]]))"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +562,7 @@
       "source": [
         "X = sm.add_constant(X) # adding a constant"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +572,7 @@
         "outputId": "65cd874f-0f2d-4379-82d0-692fdf8289a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 468
+          "height": 479
         }
       },
       "source": [
@@ -582,7 +582,7 @@
         "print_model = model.summary()\n",
         "print(print_model)"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,6 +617,40 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eAAMbUnmR9te"
+      },
+      "source": [
+        "### **Implementasi Hasil Analisis**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g2ME2NrfSj04"
+      },
+      "source": [
+        "1. Perhatikan bahwa p-value F-statistik = 0.012. Maka harga dan advertising secara simultan berpengaruh secara signifikan terhadap penjualan pie untuk derajat kepercayaan lebih dari 1.2 %\n",
+        "2. Tetapi, bagaimanakah pengaruh masing-masing variabel independent tersebut pada penjualan pie? Untuk seterusnya, asumsikan kita melakukan analisis dengan derajat kepercayaan 5% yang artinya dari 100 percobaan, kesimpulan yang kita ambil dapat berbeda/salah maksimal sebanyak 5 percobaan dari 100 percobaan tersebut. Dapat dilihat bahwa p-value t-statistik masing-masing variabel independent bernilai <5% sehingga dapat disimpulkan bahwa harga berpengaruh secara signifikan terhadap penjualan pie, begitu pula advertising.\n",
+        "3. Selanjutnya, seberapa besarkah pengaruh kedua faktor tersebut? Dari Adj. R Squared yang diperoleh, dapat disimpulkan bahwa sumbangan pengaruh 2 faktor tersebut secara simultan terhadap penjualan pie adalah sebesar 44.2 %.\n",
+        "Hal ini berarti bahwa sisanya yaitu sebesar 55.8% keberhasilan penjualan pie ditentukan oleh faktor lain contohnya seperti rasa pie, trend pasar, dan lain sebagainya. Maka, faktor-faktor lain tersebut perlu diperhatikan juga terkait dengan peningkatan penjualan pie.\n",
+        "4. Model dapat digunakan dengan baik apabila memenuhi uji diagnostik, yaitu menguji kesesuaian asumsi residual model. Pada summary di atas, diperoleh uji statistik Durbin-Watson adalah sebesar D=1.683. Sedangkan dari tabel Durbin-Watson untuk n=15, k=2, alpha=5%, diperoleh dl=0.946 dan du=1.543. Karena D>du maka H0 tidak ditolak artinya tidak ada autokorelasi pada residual. Dalam hal ini, asumsi model multiple linear regression terpenuhi.\n",
+        " "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aB92oY7ESt3w"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
